--- a/index.html
+++ b/index.html
@@ -3,92 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control de Gastos</title>
+    <title>Control de Gastos - Inicio de Sesión</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Control de Gastos</h1>
         
-        <!-- Formulario para ingresar sueldo -->
-        <section class="seccion-sueldo">
-            <h2>Ingresa tu Sueldo</h2>
-            <form id="form-sueldo">
-                <input type="number" id="sueldo" placeholder="Ingresa tu sueldo" step="0.01" required>
-                <div class="fecha-cobro">
-                    <label for="dia-cobro">Día de cobro mensual:</label>
-                    <input type="number" id="dia-cobro" min="1" max="31" placeholder="Día del mes" required>
-                </div>
-                <button type="submit">Actualizar Sueldo</button>
+        <!-- Formulario de Inicio de Sesión -->
+        <section class="seccion-login">
+            <h2>Iniciar Sesión</h2>
+            <form id="form-login">
+                <input type="email" id="email-login" placeholder="Correo electrónico" required>
+                <input type="password" id="password-login" placeholder="Contraseña" required>
+                <button type="submit">Iniciar Sesión</button>
             </form>
-            <div id="sueldo-restante">
-                <h2>Sueldo Restante: $0.00</h2>
-            </div>
+            <p>¿No tienes una cuenta? <a href="#" id="mostrar-registro">Regístrate aquí</a></p>
         </section>
 
-        <!-- Contenedor de columnas para gastos fijos y diarios -->
-        <div class="columnas-container">
-            <!-- Columna de Gastos Fijos -->
-            <div class="columna">
-                <h2>Gastos Fijos</h2>
-                <form id="form-gasto-fijo">
-                    <select id="tipo-gasto-fijo" required>
-                        <option value="">Selecciona el tipo de gasto</option>
-                        <option value="Alquiler">Alquiler</option>
-                        <option value="Servicios">Servicios</option>
-                        <option value="Transporte">Transporte</option>
-                        <option value="Alimentación">Alimentación</option>
-                        <option value="Otros">Otros</option>
-                    </select>
-                    <input type="text" id="descripcion-fijo" placeholder="Descripción del gasto" required>
-                    <input type="number" id="monto-fijo" placeholder="Monto" step="0.01" required>
-                    <input type="date" id="fecha-fijo" required>
-                    <button type="submit">Agregar Gasto Fijo</button>
-                </form>
-                <ul id="lista-gastos-fijos"></ul>
-            </div>
-
-            <!-- Columna de Gastos Diarios -->
-            <div class="columna">
-                <h2>Gastos Diarios</h2>
-                <form id="form-gasto-diario">
-                    <input type="text" id="descripcion-diario" placeholder="Descripción del gasto" required>
-                    <input type="number" id="monto-diario" placeholder="Monto" step="0.01" required>
-                    <input type="date" id="fecha-diario" required>
-                    <button type="submit">Agregar Gasto Diario</button>
-                </form>
-                <ul id="lista-gastos-diarios"></ul>
-            </div>
-        </div>
-
-        <!-- Sección de Estadísticas -->
-        <section class="seccion-estadisticas">
-            <button id="btn-ver-gastos">Ver Estadísticas</button>
-            <div id="estadisticas" style="display: none;"></div>
-        </section>
-
-        <!-- Sección de Gráfico de Distribución -->
-        <section class="seccion-grafico">
-            <h2>Distribución de Gastos</h2>
-            <div class="grafico-container">
-                <canvas id="grafico-gastos"></canvas>
-            </div>
-        </section>
-
-        <!-- Sección de Filtro por Fecha -->
-        <section class="seccion-filtro">
-            <h2>Filtrar Gastos por Fecha</h2>
-            <div class="filtro-fecha">
-                <input type="date" id="fecha-inicio" placeholder="Fecha inicio">
-                <input type="date" id="fecha-fin" placeholder="Fecha fin">
-                <button id="btn-filtrar">Filtrar</button>
-                <button id="btn-mostrar-todos">Mostrar Todos</button>
-            </div>
-            <div id="gastos-filtrados"></div>
+        <!-- Formulario de Registro (inicialmente oculto) -->
+        <section class="seccion-registro" style="display: none;">
+            <h2>Registro de Usuario</h2>
+            <form id="form-registro">
+                <input type="text" id="nombre-registro" placeholder="Nombre completo" required>
+                <input type="email" id="email-registro" placeholder="Correo electrónico" required>
+                <input type="password" id="password-registro" placeholder="Contraseña" required>
+                <input type="password" id="confirmar-password" placeholder="Confirmar contraseña" required>
+                <button type="submit">Registrarse</button>
+            </form>
+            <p>¿Ya tienes una cuenta? <a href="#" id="mostrar-login">Inicia sesión aquí</a></p>
         </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
+
