--- a/app.html
+++ b/app.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="76fjNAU2TLk3UMSciqQ4jid6hVaqgZui1t575HBiG2I" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <!-- Metadatos para SEO -->
@@ -76,7 +77,7 @@
         
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <a href="index.html" class="sidebar-link">
+                <a href="dashboard.html" class="sidebar-link">
                     <span class="icono-inicio">🏠</span>
                     <span class="texto-link">Inicio</span>
                 </a>
