--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="76fjNAU2TLk3UMSciqQ4jid6hVaqgZui1t575HBiG2I" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Metadatos para SEO -->
